--- a/Tests/Dummy/config.yml
+++ b/Tests/Dummy/config.yml
@@ -2,3 +2,7 @@ framework:
     secret: 'foo'
     templating:
         engines: ['twig']
+
+cethyworks_google_map_display:
+    google:
+        api_key: 'bar_api_key'
